--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -35,7 +35,10 @@
       <input type="email" name="mail" placeholder="Email" class="campo">
       <span class="errores-contact" id="error-mensaje"></span>
       <textarea name="mensaje" placeholder="Ingresa tu mensaje..."></textarea>
-      <button type="submit" class="btn-enviar">Enviar</button>
+      <div class="cont-btn">
+        <button type="submit" class="btn-enviar">Enviar</button>
+      </div>
+     
       <!--input type="submit" name="enviar" value="Enviar" class="btn-enviar"-->
     </form>
 
