--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,214 +1,265 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
-  background-image: url(/img/HebraLibreFondo.jpg);
+  /*background-image: url(/img/HebraLibreFondo.jpg);*/
+  background-color: #fff;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-/*----------Header-----------
-
-header{
-  background-color: #f5c597;
-  padding: 10px;
-  border-bottom: solid 4px #d0b6b7;
-}
-
-.redes{
-  position: absolute;
-  top: 15px;
-  left: 10px;
-}
-
-header i{
-  color: #859bb2;
-  font-size: 20px;
-  margin-right: 7px;
-  border: #d0b6b7 solid 1px;
-  border-radius:30%;
-  padding: 4px;
-  box-shadow: 1px 2px 6px #859bb2;
-}
-
-.nav-bar{
-  display: flex;
-  justify-content: center;
-}
-
-.enlaces{
-  display: flex;
-  list-style-type: none;
-  margin-right: 20px;
-}
-
-li{
-  margin-right: 10px;
-}
-.logo{
-  width: 190px;
-  height: 190px;
-  text-align: center;
-}*/
-
 .container-principal{
   display: flex;
   flex-wrap: wrap;
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-
-.container {
-  width: 70%;
-  border: 1px solid #3D3A37;
-  box-sizing: border-box ;
+  margin: 30px 20px 60px 20px;
+  padding: 10px;
 }
 
 .cart-section {
   flex: 1;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-}
-
-.product {
-  display: inline;
-  align-items: center;
+  /*border: solid 1px purple;*/
+  max-width: 90%;
+  margin: 10px;
 }
 
 .product-img {
-  max-width: 150px; /* Ajusta según tus necesidades */
+  max-width: 100px; 
   margin-right: 10px;
 }
 
 .product-details {
-  border: 2px solid #3D3A37;
   margin: 5px;
   display: flex;
   align-items: center;
-  justify-content: space-between; /* Distribuye los elementos en el espacio disponible */
-
+  justify-content: space-between; 
+  padding: 5px;
+  border-top: solid 2px #d0b6b7;
+  border-bottom: solid 2px #d0b6b7;
 }
 
 .product-info{
   flex: 1;
-  margin-right: 10px; /* Ajusta el espacio entre la imagen y la información del producto */
+  margin-right: 10px;
+  display: flex;
+  padding: 15px;
+  justify-content: space-between;
 }
+
+.precio-product{
+  font-weight: bolder;
+}
+
+.icon-button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color:#a57374;
+  padding: 25px;  
+}
+
 
 
 .sidebar {
   width: 30%;
-  border: 1px solid #3D3A37;
-  display: flex;
-  flex-direction: column;
-  }
+  border: 2px solid #d0b6b7 ;
+  border-radius: 5px;
+  padding: 10px;
+  height: 500px;
+}
 
 
 .subtotal {
-  font-family: poppins;
-  flex: 1;
-  margin-top: 20px;
-  margin-left: 10px;
-  position: relative;
-}
-
-.recommendation {
-  border: 1px solid #3D3A37;
+  font-family: 'Roboto';
+  margin-top: 10px;
   padding: 10px;
-  margin-top: 20px;
-  width: 100%;
-  box-sizing: border-box;
 }
 
-.recommendation-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.recommendation-img {
-  max-width: 150px; /* Ajusta según tus necesidades */
-  margin-right: 10px;
-  display: inline-block
-}
-
-.checkout {
-  margin-top: 20px;
+.subtotal h3{
+  border-bottom: solid 1px #a57374;
   text-align: center;
-  box-sizing: border-box;
+  padding: 5px;
+  
 }
 
-.checkout-content {
+.contenedor-resumen{
+  padding: 15px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+table{
+  padding: 10px;
+}
+
+th{
+  padding:20px
+}
+
+td{
+  padding: 20px;
+}
+
+
+.checkout-btn {
+  background:#a57374;
+  color:#fff;
+  border: solid 1px #a57374;
+  position:relative;
+  height:40px;
+  width: 250px;
+  font-size:16px;
+  padding: 5px;
+    
+}
+
+.checkout-btn:hover{
+  background: #d0b6b7;
+}
+
+.contenedor-btn-comprar {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
 }
 
-/*---------Foter----------
 
-footer{
-  background-color:white;
-  margin-bottom: 10px;
-  border-top: solid 4px #d0b6b7;
-  padding-top: 25px;
-  padding-bottom: 10px;
-}
-
-footer h5{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  background-color: #cac2c0;
-}*/
-
-/* Media queries para pantallas pequeñas (ej. teléfonos) */
-@media screen and (max-width: 670px) {
-  .redes i {
-    margin-right: 10px; /* Reduzco el espacio entre íconos de redes sociales */
-  }
-
-  .logo {
-    width: 100%;
-    max-width: 150px;
-    height: auto;
-    margin: 0 auto; /* Centra el logo */
-  }
-
-  .container {
-    width: 100%;
-    box-sizing: border-box;
-    margin-right: 0;
-    flex-wrap: wrap;
-
+@media (max-width: 767px) {
+  .container-principal{
+    margin: 10px 10px 20px 10px;
+    padding: 10px;
+    justify-content: center;
   }
 
   .sidebar {
-    width: 100%;
-    margin-top: 20px;
+    width: 90%;
+    margin-top: 15px;
+    height: 400px;
   }
 
-  .subtotal,
-  .recommendation {
-    width: 100%; 
-    margin-top: 20px;
+  .product-info{
+    margin-right: 10px;
+    margin-bottom: 10px;
+    display: block;
+    padding: 15px;
+  }
+  .descrip-prod{
+    display: none;
   }
 
-
-  .recommendation-img {
-    max-width: 100%;
+  .icon-button{
+    padding: 3px;
+  }
+  
+  .product-img {
+    max-width: 70px; 
     margin-right: 10px;
   }
+
+  .cart-section {
+    /*border: solid 1px purple;*/
+    max-width: 100%;
+  }
+
+  table{
+    padding: 7px;
+  }
+  
+  th{
+    padding:10px
+  }
+  
+  td{
+    padding: 10px;
+  }
+  
+  .checkout-btn {
+    height:40px;
+    width: 150px;
+    font-size:12px;
+    padding: 5px;
+      
+  }
+
+  .contenedor-resumen{
+    margin-top: 0px;
+  }
+
+  .contenedor-cant{
+    margin-bottom: 5px;
+  }
+
 }
 
-/* Media queries para pantallas medianas (ej. tabletas) */
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  /* ... (ajustes adicionales según sea necesario) ... */
-}
 
-/* Media queries para pantallas grandes (ej. computadoras) */
-@media screen and (min-width: 1025px) {
-  /* ... (ajustes adicionales según sea necesario) ... */
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .container-principal {
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 10px 20px 10px;
+    padding: 10px;
+    justify-content: center;
+  }
+
+  .product-info{
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .product-img {
+    max-width: 100px; 
+  }
+
+  .icon-button{
+    padding: 25px;
+  }
+
+  .contenedor-cant{
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .product-details{
+    padding: 15px;
+  }
+
+  .sidebar {
+    width: 55%;
+    margin-top: 15px;
+    height: 450px;
+  }
+
+  .cart-section {
+    max-width: 100%;
+  }
+
+  .checkout-btn {
+    height:40px;
+    width: 180px;
+    font-size:12px;
+    padding: 5px;
+      
+  }
+
+  .contenedor-resumen{
+    padding: 10px;
+    margin-top: 0px;
+  }
 }
